# BEVDet-ROS-TensorRT

./: CMakeLists.txt  README.md  configure.yaml  package.xml
cfgs/: config.yaml
ckpts/: lt_d.yaml
doc/: modify.md  run.md
include/: data.h
include_ros/: bevdet_ros.h
launch/: bevdet_node.launch
rviz/: 2.rviz  bevdet.rviz
sample0/: 0.pcd  sample0_lidarbox.txt
src/: bevdet.cpp  cpu_jpegdecoder.cpp  data.cpp  nvjpegdecoder.cpp  preprocess.cu
test/: 01test.cpp  configure.yaml  demo_bevdet.cpp  view.cpp
test_ros/: bevdet_ros.cpp  test_sample.cpp.back
tools/: bin2pcd.py  viewer.py
